--- a/links.html
+++ b/links.html
@@ -61,6 +61,8 @@
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/56598961" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
+
+
 </head>
 <body>
     <!--[if lt IE 8]>
@@ -316,18 +318,18 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 						<div class="container">
 							<h2 class="links-page-title">ПОПУЛЯРНЫЕ</h2>
 							<div class="article-more__list">
-								<a href="./vot-i-otshumeli-prazdniki.html" class="article-more__item">
+								<a href="./posts/./vot-i-otshumeli-prazdniki.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>56</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79791136_170797607360733_4651297341076769481_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=PQg2_OX0in8AX_AxAzL&oh=fd779415a6bb4076cadd3086cb1856ab&oe=5EB6526E" alt="Вот и отшумели праздники!">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79791136_170797607360733_4651297341076769481_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=y1_hZB-ZwAoAX_u2cya&oh=b83de61ef563ea332da9c7621842824f&oe=5EB6526E" alt="Вот и отшумели праздники!">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
 ">Вот и отшумели праздники!</div>
 								</a>
-								<a href="./o-tom-kak-my-stroili-shourumx-on-zhe-degustatsionnyy.html" class="article-more__item">
+								<a href="./posts/./o-tom-kak-my-stroili-shourumx-on-zhe-degustatsionnyy.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>51</span>
@@ -338,29 +340,29 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 		color: #FFFFFF;
 ">О том как мы строили шоурум, он же дегустационный</div>
 								</a>
-								<a href="./kak-pravil-no-razvodit--mutsin.html" class="article-more__item">
+								<a href="./posts/./kak-pravil-no-razvodit--mutsin.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>43</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894124_614325229384854_8722471482158176743_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=6s09Ydh6NBMAX_3PDSI&oh=4745e533f6b1adbf8399f7255ab4dc32&oe=5ED0BE20" alt="Как правильно разводить муцин.">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894124_614325229384854_8722471482158176743_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=HaGoZpldsr0AX8AICLq&oh=ec06ee70c5f29ca68dff5e980dfa748a&oe=5ED0BE20" alt="Как правильно разводить муцин.">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
 ">Как правильно разводить муцин.</div>
 								</a>
-								<a href="./pro-xxelastinxx.html" class="article-more__item">
+								<a href="./posts/./pro-xxelastinxx.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>40</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81129505_1386661818162495_293733418860184268_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=GsJzvQlDlEQAX8MoOqk&oh=31882de13ddf7475552b5f3d91fdeb67&oe=5E31EAE2" alt="Про 💧ЭЛАСТИН💧">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81129505_1386661818162495_293733418860184268_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=GsJzvQlDlEQAX8MoOqk&oh=0a7a07af7c3b5bef461ff82a69c5c5ca&oe=5E3293A2" alt="Про 💧ЭЛАСТИН💧">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
 ">Про 💧ЭЛАСТИН💧</div>
 								</a>
-								<a href="./xxpro-pchyolxx.html" class="article-more__item">
+								<a href="./posts/./xxpro-pchyolxx.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>40</span>
@@ -371,18 +373,18 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 		color: #FFFFFF;
 ">🐝Про пчёл🐝</div>
 								</a>
-								<a href="./chto-vnutri.html" class="article-more__item">
+								<a href="./posts/./dlya-tekh-kto-eshchyo-somnevaetsya-v-deystvii-mutsina.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>39</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/78912761_188619372309833_1047117982070060253_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=whU8BlAe3h4AX9YJfJr&oh=97e1680155b740e8bb00d083adaf69f2&oe=5EBC9806" alt="Что внутри?">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/77117511_107756643947608_4047437575480573147_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=gyFcx-aXQEkAX83m6L8&oh=84f4a40f4b90bc4ff2903aee48392517&oe=5EDA4C12" alt="Для тех кто ещё сомневается в действии муцина">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
-">Что внутри?</div>
+">Для тех кто ещё сомневается в действии муцина</div>
 								</a>
-								<a href="./kak-zhe-prekrasno-zhit--za-gorodom.html" class="article-more__item">
+								<a href="./posts/./kak-zhe-prekrasno-zhit--za-gorodom.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>39</span>
@@ -393,16 +395,16 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 		color: #FFFFFF;
 ">Как же прекрасно жить за городом!</div>
 								</a>
-								<a href="./dlya-tekh-kto-eshchyo-somnevaetsya-v-deystvii-mutsina.html" class="article-more__item">
+								<a href="./posts/./chto-vnutri.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>39</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/77117511_107756643947608_4047437575480573147_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=gyFcx-aXQEkAX83m6L8&oh=84f4a40f4b90bc4ff2903aee48392517&oe=5EDA4C12" alt="Для тех кто ещё сомневается в действии муцина">
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/78912761_188619372309833_1047117982070060253_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=whU8BlAe3h4AX9YJfJr&oh=97e1680155b740e8bb00d083adaf69f2&oe=5EBC9806" alt="Что внутри?">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
-">Для тех кто ещё сомневается в действии муцина</div>
+">Что внутри?</div>
 								</a>
 							</div>
 						</div>
