--- a/links.html
+++ b/links.html
@@ -9,8 +9,8 @@
     <script async src="https://use.fontawesome.com/d758daec41.js"></script>   
 	<link rel="stylesheet" href="css/style.css"/>
     
-    <meta name="description" content="экоферма улиточка муцин улитки жизньулиток история snailfarm snailmucin сад огород еда">
-    <meta name="keywords" content="экоферма улиточка муцин улитки жизньулиток история snailfarm snailmucin сад огород еда" />
+    <meta name="description" content="муцин экоферма улиточка улитки жизньулиток история snailfarm snailmucin сад огород еда">
+    <meta name="keywords" content="муцин экоферма улиточка улитки жизньулиток история snailfarm snailmucin сад огород еда" />
     
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -39,7 +39,7 @@
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
     <meta property="og:title" content="Муцин Улитки." />
-    <meta property="og:description" content="экоферма улиточка муцин улитки жизньулиток история snailfarm snailmucin сад огород еда" />
+    <meta property="og:description" content="муцин экоферма улиточка улитки жизньулиток история snailfarm snailmucin сад огород еда" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="ulitochka_eco_farm" />
 
@@ -79,7 +79,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/70205017_542848953187344_3076263629905985536_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=Je_vGaNn9mAAX_q3nOT&oh=d7e6c849cae271dda1679ad3df52f77a&oe=5ED019CE" alt="Муцин Улитки."></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/70205017_542848953187344_3076263629905985536_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=QbTia-lDOHIAX_G1sHp&oh=0386b4421c11123f0c28dd9a4f9a58e5&oe=5ED019CE" alt="Муцин Улитки."></div>
 							<div class="header__logo-txt">ulitochka_eco_farm</div>
 						</a>
 						<div class="header__title">Муцин Улитки.</div>
@@ -343,7 +343,7 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 								<a href="./posts/./kak-pravil-no-razvodit--mutsin.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>44</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>45</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894124_614325229384854_8722471482158176743_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=HaGoZpldsr0AX8AICLq&oh=ec06ee70c5f29ca68dff5e980dfa748a&oe=5ED0BE20" alt="Как правильно разводить муцин.">
 									</div>
@@ -356,7 +356,7 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>41</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81129505_1386661818162495_293733418860184268_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=GsJzvQlDlEQAX8MoOqk&oh=64f79a3fb38a9701ee73ad600bf5ad49&oe=5E348DE2" alt="Про 💧ЭЛАСТИН💧">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81129505_1386661818162495_293733418860184268_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=pupireJ3aioAX-K8wvQ&oh=7f1468560313b8f90a1f32292ea6d185&oe=5E35DF62" alt="Про 💧ЭЛАСТИН💧">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
@@ -373,28 +373,6 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 		color: #FFFFFF;
 ">Для тех кто ещё сомневается в действии муцина</div>
 								</a>
-								<a href="./posts/./xxpro-pchyolxx.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>40</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/72296749_451022435615875_8039686175623080522_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=skAnwlaGUSwAX8E8FSE&oh=408e7835e28570f3b10cc25db0003227&oe=5EC9289A" alt="🐝Про пчёл🐝">
-									</div>
-									<div class="article-more__item-name" style="
-		color: #FFFFFF;
-">🐝Про пчёл🐝</div>
-								</a>
-								<a href="./posts/./kak-zhe-prekrasno-zhit--za-gorodom.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>39</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/75223580_290898778521024_644791252341937407_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=fIejsRWyFyEAX-g2lkb&oh=dfcb050e34943fcf43052837b2644ef8&oe=5ECE6F7A" alt="Как же прекрасно жить за городом!">
-									</div>
-									<div class="article-more__item-name" style="
-		color: #FFFFFF;
-">Как же прекрасно жить за городом!</div>
-								</a>
 								<a href="./posts/./chto-vnutri.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
@@ -405,6 +383,30 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
 ">Что внутри?</div>
+								</a>
+								<a href="./posts/./kak-zhe-prekrasno-zhit--za-gorodom.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>39</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/75223580_290898778521024_644791252341937407_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=Jk-Fic3Q_DsAX9Q8CO7&oh=5cdee176d796bede4e1d0dc0e2631796&oe=5ECE6F7A" alt="Как же прекрасно жить за городом!">
+									</div>
+									<div class="article-more__item-name" style="
+		color: #FFFFFF;
+">Как же прекрасно жить за городом!</div>
+								</a>
+								<a href="./posts/./-dot-xxprodlenie-novogodney-aktsiixx.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>37</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/77039068_158669528734049_4581008309227362048_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=akGYsuIr9n8AX_1iK0D&oh=796f827a7b3f90bc46389bcc8b3d3066&oe=5ED54726" alt=".
+🎄Продление новогодней акции🎄">
+									</div>
+									<div class="article-more__item-name" style="
+		color: #FFFFFF;
+">.
+🎄Продление новогодней акции🎄</div>
 								</a>
 							</div>
 						</div>
