--- a/links.html
+++ b/links.html
@@ -334,7 +334,7 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>54</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80900696_114521346564401_8003277424207151392_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=kcMzhEP6heYAX8fX8Os&oh=618dfc390a634bd71e7852d89839f953&oe=5EC4BA36" alt="О том как мы строили шоурум, он же дегустационный">
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80900696_114521346564401_8003277424207151392_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=30vk95XA9LwAX-HZi2_&oh=896480032da02d3fe1a87fe23c8c667d&oe=5EC4BA36" alt="О том как мы строили шоурум, он же дегустационный">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
@@ -356,7 +356,7 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>41</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/77117511_107756643947608_4047437575480573147_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=5x3kxTtkO_AAX90-CKn&oh=530dc6dafc22ca803494b9a67c457f8e&oe=5EDA4C12" alt="Для тех кто ещё сомневается в действии муцина">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/77117511_107756643947608_4047437575480573147_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=LLQix75IZ3cAX_I4w__&oh=2def96b116bfafebe8b518f9030f7fa7&oe=5EDA4C12" alt="Для тех кто ещё сомневается в действии муцина">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
@@ -367,7 +367,7 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>41</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81129505_1386661818162495_293733418860184268_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=cZ80RmzbLg4AX-T9pV2&oh=e2c09cc4b75a49b2f264435de3a8b711&oe=5E3B2562" alt="Про 💧ЭЛАСТИН💧">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81129505_1386661818162495_293733418860184268_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=cZ80RmzbLg4AX-T9pV2&oh=b1b14b61a36fe1996c68a1986e533bc1&oe=5E3C76E2" alt="Про 💧ЭЛАСТИН💧">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
@@ -395,16 +395,18 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 		color: #FFFFFF;
 ">Расскажу о некоторых тонкостях</div>
 								</a>
-								<a href="./posts/./segodnya-post-bez-informatsii-i-poleznostey.html" class="article-more__item">
+								<a href="./posts/./-dot-xxprodlenie-novogodney-aktsiixx.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>37</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82285187_1019123675128274_5927152375484103026_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=s_npzPSZyngAX_jdhOH&oh=b78488ab17ea29e1e2ff001ef06e1a71&oe=5EC2364C" alt="Сегодня пост без информации и полезностей.">
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/77039068_158669528734049_4581008309227362048_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=hyUEyP0fcO0AX-J62WM&oh=18098f97a2b51e74e070aaaafbb26d4a&oe=5ED54726" alt=".
+🎄Продление новогодней акции🎄">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
-">Сегодня пост без информации и полезностей.</div>
+">.
+🎄Продление новогодней акции🎄</div>
 								</a>
 							</div>
 						</div>
