--- a/links.html
+++ b/links.html
@@ -9,8 +9,8 @@
     <script async src="https://use.fontawesome.com/d758daec41.js"></script>   
 	<link rel="stylesheet" href="css/style.css"/>
     
-    <meta name="description" content="муцин экоферма улиточка улитки жизньулиток история snailfarm snailmucin сад огород еда">
-    <meta name="keywords" content="муцин экоферма улиточка улитки жизньулиток история snailfarm snailmucin сад огород еда" />
+    <meta name="description" content="муцин экоферма улиточка жизньулиток улитки история snailfarm snailmucin сад огород еда">
+    <meta name="keywords" content="муцин экоферма улиточка жизньулиток улитки история snailfarm snailmucin сад огород еда" />
     
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -39,7 +39,7 @@
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
     <meta property="og:title" content="Муцин Улитки." />
-    <meta property="og:description" content="муцин экоферма улиточка улитки жизньулиток история snailfarm snailmucin сад огород еда" />
+    <meta property="og:description" content="муцин экоферма улиточка жизньулиток улитки история snailfarm snailmucin сад огород еда" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="ulitochka_eco_farm" />
 
@@ -79,7 +79,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/70205017_542848953187344_3076263629905985536_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=ZuveIwm46XIAX-Uc8se&oh=fd3c01dd7fa658c52737600a644d5a9f&oe=5ED019CE" alt="Муцин Улитки."></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/70205017_542848953187344_3076263629905985536_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=RrlbIQwo6AMAX_j_s9F&oh=3d3acea3603853c7db6ff9e534ed543b&oe=5ED019CE" alt="Муцин Улитки."></div>
 							<div class="header__logo-txt">ulitochka_eco_farm</div>
 						</a>
 						<div class="header__title">Муцин Улитки.</div>
@@ -102,6 +102,15 @@
 					<div class="stories__slider" id="js-stories-slider">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
+								<div class="stories__slide" title="Последнее">
+									<a href="index.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/Poslednee.png);"></div>
+										<div class="stories__slide-txt" style="		color: #FFFFFF;
+">Последнее</div>
+									</a>
+								</div>
+							</div>
+							<div class="swiper-slide">
 								<div class="stories__slide" title="муцин экоферма улиточка">
 									<a href="./tags/./mutsin-ekoferma-ulitochka.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/mutsin-ekoferma-ulitochka.png);"></div>
@@ -120,20 +129,20 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="муцин улитки">
-									<a href="./tags/./mutsin-ulitki.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/mutsin-ulitki.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">муцин улитки</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
 								<div class="stories__slide" title="жизньулиток экоферма улиточка">
 									<a href="./tags/./zhizn-ulitok-ekoferma-ulitochka.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/zhizn-ulitok-ekoferma-ulitochka.png);"></div>
 										<div class="stories__slide-txt" style="		color: #FFFFFF;
 ">жизньулиток экоферма улиточка</div>
+									</a>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="stories__slide" title="муцин улитки">
+									<a href="./tags/./mutsin-ulitki.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/mutsin-ulitki.png);"></div>
+										<div class="stories__slide-txt" style="		color: #FFFFFF;
+">муцин улитки</div>
 									</a>
 								</div>
 							</div>
@@ -323,7 +332,7 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>60</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79791136_170797607360733_4651297341076769481_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=xqFQHXdnXK8AX9jfQot&oh=21887a0573e514f08f0e1e52ac542b35&oe=5EB6526E" alt="Вот и отшумели праздники!">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79791136_170797607360733_4651297341076769481_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=xK3gcDE4iFAAX8YG_3t&oh=879da808d8c532d76e4921be6b9bec51&oe=5EB6526E" alt="Вот и отшумели праздники!">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
@@ -334,7 +343,7 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>54</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80900696_114521346564401_8003277424207151392_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=30vk95XA9LwAX-HZi2_&oh=896480032da02d3fe1a87fe23c8c667d&oe=5EC4BA36" alt="О том как мы строили шоурум, он же дегустационный">
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80900696_114521346564401_8003277424207151392_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=GI1pnbRRqI0AX8_OoFU&oh=d4c2aa6e9c1283da9196942ebe770992&oe=5EC4BA36" alt="О том как мы строили шоурум, он же дегустационный">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
@@ -343,70 +352,68 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 								<a href="./posts/./kak-pravil-no-razvodit--mutsin.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>45</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>46</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894124_614325229384854_8722471482158176743_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=7EVMCTH-HxUAX_Hox-E&oh=84e38894dfafddba17afa23a12009e18&oe=5ED0BE20" alt="Как правильно разводить муцин.">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894124_614325229384854_8722471482158176743_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=vWDMFwDiSIQAX-RDg_1&oh=9b580c15f26648af74309a366a68c76d&oe=5ED0BE20" alt="Как правильно разводить муцин.">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
 ">Как правильно разводить муцин.</div>
 								</a>
-								<a href="./posts/./dlya-tekh-kto-eshchyo-somnevaetsya-v-deystvii-mutsina.html" class="article-more__item">
+								<a href="./posts/./segodnya-post-bez-informatsii-i-poleznostey.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>42</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82285187_1019123675128274_5927152375484103026_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=VZG86lyNs7oAX_lVZY1&oh=1218c97aae39ad291e9ca58dbabe6bcc&oe=5EC2364C" alt="Сегодня пост без информации и полезностей.">
+									</div>
+									<div class="article-more__item-name" style="
+		color: #FFFFFF;
+">Сегодня пост без информации и полезностей.</div>
+								</a>
+								<a href="./posts/./pro-ulitkin-domik-xx.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>41</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/77117511_107756643947608_4047437575480573147_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=LLQix75IZ3cAX_I4w__&oh=2def96b116bfafebe8b518f9030f7fa7&oe=5EDA4C12" alt="Для тех кто ещё сомневается в действии муцина">
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82965605_557510658179105_2292549139955388895_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=h3FfHadK5WAAX_zlUKe&oh=9d6e271d2c30aef13257980f8d5a4fe8&oe=5ECBD303" alt="Про улиткин домик 🐚">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
-">Для тех кто ещё сомневается в действии муцина</div>
+">Про улиткин домик 🐚</div>
+								</a>
+								<a href="./posts/./rasskazhu-o-nekotorykh-tonkostyakh.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>41</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82763511_580699352481005_1689644945899057538_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=WzlpHxYYNLcAX9ISruN&oh=484ea9a21c095e3178d71e60a328fbb9&oe=5ED8D75F" alt="Расскажу о некоторых тонкостях">
+									</div>
+									<div class="article-more__item-name" style="
+		color: #FFFFFF;
+">Расскажу о некоторых тонкостях</div>
 								</a>
 								<a href="./posts/./pro-xxelastinxx.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>41</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81129505_1386661818162495_293733418860184268_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=cZ80RmzbLg4AX-T9pV2&oh=b1b14b61a36fe1996c68a1986e533bc1&oe=5E3C76E2" alt="Про 💧ЭЛАСТИН💧">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81129505_1386661818162495_293733418860184268_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=brFxlnQej0oAX8dMq6d&oh=6c4eabed696b8214c699dd465d2e8504&oe=5E406B62" alt="Про 💧ЭЛАСТИН💧">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
 ">Про 💧ЭЛАСТИН💧</div>
 								</a>
-								<a href="./posts/./chto-vnutri.html" class="article-more__item">
+								<a href="./posts/./dlya-tekh-kto-eshchyo-somnevaetsya-v-deystvii-mutsina.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>39</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>41</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/78912761_188619372309833_1047117982070060253_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=BVdo3v4ebUoAX-9uEA4&oh=fb8622fc39728015e7f4521abca55290&oe=5EBC9806" alt="Что внутри?">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/77117511_107756643947608_4047437575480573147_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=AFZ1IFWIQZsAX__d8p5&oh=3cf47ab0a5c5395b25eebfdaba5364b2&oe=5EDA4C12" alt="Для тех кто ещё сомневается в действии муцина">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
-">Что внутри?</div>
-								</a>
-								<a href="./posts/./rasskazhu-o-nekotorykh-tonkostyakh.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>39</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82763511_580699352481005_1689644945899057538_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=pHpQXbsW3lIAX_EF6uJ&oh=d4287acfa77e5af0e64e949140105d8a&oe=5ED8D75F" alt="Расскажу о некоторых тонкостях">
-									</div>
-									<div class="article-more__item-name" style="
-		color: #FFFFFF;
-">Расскажу о некоторых тонкостях</div>
-								</a>
-								<a href="./posts/./-dot-xxprodlenie-novogodney-aktsiixx.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>37</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/77039068_158669528734049_4581008309227362048_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=hyUEyP0fcO0AX-J62WM&oh=18098f97a2b51e74e070aaaafbb26d4a&oe=5ED54726" alt=".
-🎄Продление новогодней акции🎄">
-									</div>
-									<div class="article-more__item-name" style="
-		color: #FFFFFF;
-">.
-🎄Продление новогодней акции🎄</div>
+">Для тех кто ещё сомневается в действии муцина</div>
 								</a>
 							</div>
 						</div>
