--- a/links/index.html
+++ b/links/index.html
@@ -33,7 +33,7 @@
 	<script>
 		window.onload = function (){ 
 			ym(56598961, 'reachGoal', 'links'); 
-			window.location.href = 'https://mucin.farm/links.html';
+			window.location.href = 'https://mucin.farm/links.html' + window.location.search;
 		}
 	</script>
 </body>
