--- a/404.html
+++ b/404.html
@@ -33,7 +33,7 @@
 	<script>
 		window.onload = function (){ 
 			ym(56598961, 'reachGoal', '404error'); 
-			window.location.href = 'https://mucin.farm/error.html';
+			window.location.href = 'https://mucin.farm/error.html' + window.location.search;
 		}
 	</script>
 </body>
