--- a/error.html
+++ b/error.html
@@ -60,7 +60,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./main.html" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/70205017_542848953187344_3076263629905985536_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=ZuveIwm46XIAX-Uc8se&oh=fd3c01dd7fa658c52737600a644d5a9f&oe=5ED019CE" alt="Муцин Улитки."></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/70205017_542848953187344_3076263629905985536_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=JIKLBTaqWbIAX8j2KRF&oh=ff40edfbed7be0deebdfab5568329cd7&oe=5ED019CE" alt="Муцин Улитки."></div>
 							<div class="header__logo-txt">ulitochka_eco_farm</div>
 						</a>
 						<div class="header__title">Муцин Улитки.</div>
@@ -114,18 +114,27 @@
 							<a href="./posts/./vot-i-otshumeli-prazdniki.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>60</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>59</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79791136_170797607360733_4651297341076769481_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=xqFQHXdnXK8AX9jfQot&oh=21887a0573e514f08f0e1e52ac542b35&oe=5EB6526E" alt="Вот и отшумели праздники!">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79791136_170797607360733_4651297341076769481_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=AZGG7bXv8rUAX_M6eOS&oh=ff16e80974982c4c5053c514f987b1f5&oe=5EDDDF6E" alt="Вот и отшумели праздники!">
 							</div>
 							<div class="article-more__item-name">Вот и отшумели праздники!</div>
+						</a>
+							<a href="./posts/./fevral--my-provedyom-v-puteshestvii.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>55</span>
+								</div>
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83907039_2594494030836698_609898643171055656_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=rbroqyRlOAEAX-gXsj5&oh=bcc00928fcf2680e1f334e44b2351a30&oe=5EB88F99" alt="Февраль мы проведём в путешествии.">
+							</div>
+							<div class="article-more__item-name">Февраль мы проведём в путешествии.</div>
 						</a>
 							<a href="./posts/./o-tom-kak-my-stroili-shourumx-on-zhe-degustatsionnyy.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>54</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>53</span>
 								</div>
-								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80900696_114521346564401_8003277424207151392_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=30vk95XA9LwAX-HZi2_&oh=896480032da02d3fe1a87fe23c8c667d&oe=5EC4BA36" alt="О том как мы строили шоурум, он же дегустационный">
+								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80900696_114521346564401_8003277424207151392_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=GI1pnbRRqI0AX8_OoFU&oh=d4c2aa6e9c1283da9196942ebe770992&oe=5EC4BA36" alt="О том как мы строили шоурум, он же дегустационный">
 							</div>
 							<div class="article-more__item-name">О том как мы строили шоурум, он же дегустационный</div>
 						</a>
@@ -134,54 +143,45 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>45</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894124_614325229384854_8722471482158176743_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=7EVMCTH-HxUAX_Hox-E&oh=84e38894dfafddba17afa23a12009e18&oe=5ED0BE20" alt="Как правильно разводить муцин.">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894124_614325229384854_8722471482158176743_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=NSsaPQ58_HMAX8cvk98&oh=257e27a593ebbfb40a56c8a6e67be187&oe=5ED0BE20" alt="Как правильно разводить муцин.">
 							</div>
 							<div class="article-more__item-name">Как правильно разводить муцин.</div>
 						</a>
-							<a href="./posts/./pro-xxelastinxx.html" class="article-more__item">
+							<a href="./posts/./segodnya-post-bez-informatsii-i-poleznostey.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>42</span>
+								</div>
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82285187_1019123675128274_5927152375484103026_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=Moi8ptKE_NgAX9rz8u6&oh=21672daf57c54e0b81e798bedb9a097f&oe=5EC2364C" alt="Сегодня пост без информации и полезностей.">
+							</div>
+							<div class="article-more__item-name">Сегодня пост без информации и полезностей.</div>
+						</a>
+							<a href="./posts/./pro-ulitkin-domik-xx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>41</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81129505_1386661818162495_293733418860184268_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=cZ80RmzbLg4AX-T9pV2&oh=b1b14b61a36fe1996c68a1986e533bc1&oe=5E3C76E2" alt="Про 💧ЭЛАСТИН💧">
+								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82965605_557510658179105_2292549139955388895_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=h3FfHadK5WAAX_zlUKe&oh=9d6e271d2c30aef13257980f8d5a4fe8&oe=5ECBD303" alt="Про улиткин домик 🐚">
 							</div>
-							<div class="article-more__item-name">Про 💧ЭЛАСТИН💧</div>
+							<div class="article-more__item-name">Про улиткин домик 🐚</div>
+						</a>
+							<a href="./posts/./rasskazhu-o-nekotorykh-tonkostyakh.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>41</span>
+								</div>
+								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82763511_580699352481005_1689644945899057538_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=loLGkmJ4y1oAX8VKBj9&oh=b0e1cf195d6ec2f52a26b09d1cddd143&oe=5ED8D75F" alt="Расскажу о некоторых тонкостях">
+							</div>
+							<div class="article-more__item-name">Расскажу о некоторых тонкостях</div>
 						</a>
 							<a href="./posts/./dlya-tekh-kto-eshchyo-somnevaetsya-v-deystvii-mutsina.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>41</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/77117511_107756643947608_4047437575480573147_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=LLQix75IZ3cAX_I4w__&oh=2def96b116bfafebe8b518f9030f7fa7&oe=5EDA4C12" alt="Для тех кто ещё сомневается в действии муцина">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/77117511_107756643947608_4047437575480573147_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=AFZ1IFWIQZsAX__d8p5&oh=af5b32a662d0e34de233846ac19f4418&oe=5F01D912" alt="Для тех кто ещё сомневается в действии муцина">
 							</div>
 							<div class="article-more__item-name">Для тех кто ещё сомневается в действии муцина</div>
-						</a>
-							<a href="./posts/./rasskazhu-o-nekotorykh-tonkostyakh.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>39</span>
-								</div>
-								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82763511_580699352481005_1689644945899057538_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=pHpQXbsW3lIAX_EF6uJ&oh=d4287acfa77e5af0e64e949140105d8a&oe=5ED8D75F" alt="Расскажу о некоторых тонкостях">
-							</div>
-							<div class="article-more__item-name">Расскажу о некоторых тонкостях</div>
-						</a>
-							<a href="./posts/./chto-vnutri.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>39</span>
-								</div>
-								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/78912761_188619372309833_1047117982070060253_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=BVdo3v4ebUoAX-9uEA4&oh=fb8622fc39728015e7f4521abca55290&oe=5EBC9806" alt="Что внутри?">
-							</div>
-							<div class="article-more__item-name">Что внутри?</div>
-						</a>
-							<a href="./posts/./segodnya-post-bez-informatsii-i-poleznostey.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>37</span>
-								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82285187_1019123675128274_5927152375484103026_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=s_npzPSZyngAX_jdhOH&oh=b78488ab17ea29e1e2ff001ef06e1a71&oe=5EC2364C" alt="Сегодня пост без информации и полезностей.">
-							</div>
-							<div class="article-more__item-name">Сегодня пост без информации и полезностей.</div>
 						</a>
 						</div>
 				</div>
