--- a/links.html
+++ b/links.html
@@ -79,7 +79,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/70205017_542848953187344_3076263629905985536_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=JIKLBTaqWbIAX8j2KRF&oh=8b8348cd05ff8312ca35de803236541d&oe=5ED019CE" alt="Муцин Улитки."></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/70205017_542848953187344_3076263629905985536_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=yPF1P9EyaDMAX9YpYQC&oh=1f5d4e74a5be7959b454a2896fd63043&oe=5ED019CE" alt="Муцин Улитки."></div>
 							<div class="header__logo-txt">ulitochka_eco_farm</div>
 						</a>
 						<div class="header__title">Муцин Улитки.</div>
@@ -101,15 +101,6 @@
 				<div class="stories__slider-wrap">
 					<div class="stories__slider" id="js-stories-slider">
 						<div class="swiper-wrapper">
-							<div class="swiper-slide">
-								<div class="stories__slide" title="Последнее">
-									<a href="index.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/Poslednee.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">Последнее</div>
-									</a>
-								</div>
-							</div>
 							<div class="swiper-slide">
 								<div class="stories__slide" title="муцин экоферма улиточка">
 									<a href="./tags/./mutsin-ekoferma-ulitochka.html">
@@ -332,7 +323,7 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>59</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79791136_170797607360733_4651297341076769481_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=AZGG7bXv8rUAX_M6eOS&oh=23790ae523a0e5360666c715efc8ca34&oe=5EDDDF6E" alt="Вот и отшумели праздники!">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79791136_170797607360733_4651297341076769481_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=AZGG7bXv8rUAX_M6eOS&oh=ff16e80974982c4c5053c514f987b1f5&oe=5EDDDF6E" alt="Вот и отшумели праздники!">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
@@ -341,9 +332,9 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 								<a href="./posts/./fevral--my-provedyom-v-puteshestvii.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>57</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>58</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83907039_2594494030836698_609898643171055656_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=rbroqyRlOAEAX-gXsj5&oh=b99af4771f70300fd737f397c0441cd7&oe=5EE01C99" alt="Февраль мы проведём в путешествии.">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83907039_2594494030836698_609898643171055656_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=rbroqyRlOAEAX-gXsj5&oh=d48e077a7f11f74443efe38f35d2a7f7&oe=5EE01C99" alt="Февраль мы проведём в путешествии.">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
@@ -354,7 +345,7 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>53</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80900696_114521346564401_8003277424207151392_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=Z9e3AUcUOdgAX9hsyTr&oh=8c0c997402e58f9540b698d054c0cc90&oe=5EC4BA36" alt="О том как мы строили шоурум, он же дегустационный">
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80900696_114521346564401_8003277424207151392_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=Z9e3AUcUOdgAX9hsyTr&oh=6b5fd9378ee2612a50f4547c70254aa0&oe=5EC4BA36" alt="О том как мы строили шоурум, он же дегустационный">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
@@ -365,7 +356,7 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>45</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894124_614325229384854_8722471482158176743_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=NSsaPQ58_HMAX8cvk98&oh=b8b345013b20d4e0345ee917f69b8705&oe=5ED0BE20" alt="Как правильно разводить муцин.">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894124_614325229384854_8722471482158176743_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=NSsaPQ58_HMAX8cvk98&oh=257e27a593ebbfb40a56c8a6e67be187&oe=5ED0BE20" alt="Как правильно разводить муцин.">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
@@ -376,18 +367,29 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>42</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82285187_1019123675128274_5927152375484103026_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=Moi8ptKE_NgAX9rz8u6&oh=d2ca8ea7ec5b9e4a7ab889502be2a96a&oe=5EC2364C" alt="Сегодня пост без информации и полезностей.">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82285187_1019123675128274_5927152375484103026_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=L-S-noZmUl8AX-Je6YX&oh=5bd87ea369929ae3a4cc5494e5832ec9&oe=5EC2364C" alt="Сегодня пост без информации и полезностей.">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
 ">Сегодня пост без информации и полезностей.</div>
+								</a>
+								<a href="./posts/./pro-ulitkin-domik-xx.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>41</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82965605_557510658179105_2292549139955388895_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=XoBaadU0HD8AX8nMemH&oh=a8b8d447b208bf85b1adc4a3d90d60ce&oe=5ECBD303" alt="Про улиткин домик 🐚">
+									</div>
+									<div class="article-more__item-name" style="
+		color: #FFFFFF;
+">Про улиткин домик 🐚</div>
 								</a>
 								<a href="./posts/./dlya-tekh-kto-eshchyo-somnevaetsya-v-deystvii-mutsina.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>41</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/77117511_107756643947608_4047437575480573147_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=yjk-iKfBI9gAX9BwitU&oh=22ec3e95a2b6a70dc9a5f81e3ce65083&oe=5F01D912" alt="Для тех кто ещё сомневается в действии муцина">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/77117511_107756643947608_4047437575480573147_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=yjk-iKfBI9gAX9BwitU&oh=cf65a2675f3706a6f10bdd2f649b511e&oe=5F01D912" alt="Для тех кто ещё сомневается в действии муцина">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
@@ -398,22 +400,11 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>41</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82763511_580699352481005_1689644945899057538_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=loLGkmJ4y1oAX8VKBj9&oh=c77b63f63bd0be02de78da80f2d34a92&oe=5F00645F" alt="Расскажу о некоторых тонкостях">
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82763511_580699352481005_1689644945899057538_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=IYAPJzfHwqkAX92dhIU&oh=a36945bdf1d63cfaf7686b06cab68e02&oe=5F00645F" alt="Расскажу о некоторых тонкостях">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
 ">Расскажу о некоторых тонкостях</div>
-								</a>
-								<a href="./posts/./pro-ulitkin-domik-xx.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>41</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82965605_557510658179105_2292549139955388895_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=XoBaadU0HD8AX8nMemH&oh=9ee61b6c8b3edbaabeaec32b4ab24b2f&oe=5ECBD303" alt="Про улиткин домик 🐚">
-									</div>
-									<div class="article-more__item-name" style="
-		color: #FFFFFF;
-">Про улиткин домик 🐚</div>
 								</a>
 							</div>
 						</div>
