--- a/links.html
+++ b/links.html
@@ -321,7 +321,7 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 								<a href="./posts/./my-vmeste-s-xvxkonovalov-kak-vsegda.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>63</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>68</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/84447085_1111430125855918_8414975268671877222_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=pKVvLKTs0MkAX9SILA8&oh=ba61bf5d88b579433e8de558c2b1e7ac&oe=5ED23790" alt="Мы вместе с @v_konovalov как всегда,">
 									</div>
@@ -356,7 +356,7 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>54</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80900696_114521346564401_8003277424207151392_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=Z9e3AUcUOdgAX9hsyTr&oh=6b5fd9378ee2612a50f4547c70254aa0&oe=5EC4BA36" alt="О том как мы строили шоурум, он же дегустационный">
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80900696_114521346564401_8003277424207151392_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=jikEaNyNWw4AX_tkzYF&oh=db53881620ff4d110824540e841635a1&oe=5EC4BA36" alt="О том как мы строили шоурум, он же дегустационный">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
@@ -373,16 +373,16 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 		color: #FFFFFF;
 ">Как правильно разводить муцин.</div>
 								</a>
-								<a href="./posts/./rasskazhu-o-nekotorykh-tonkostyakh.html" class="article-more__item">
+								<a href="./posts/./pro-ulitkin-domik-xx.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>42</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82763511_580699352481005_1689644945899057538_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=IYAPJzfHwqkAX92dhIU&oh=a36945bdf1d63cfaf7686b06cab68e02&oe=5F00645F" alt="Расскажу о некоторых тонкостях">
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82965605_557510658179105_2292549139955388895_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=k3AabZgHSxMAX90tQ2L&oh=5e3e183a91d636374be813ffa0d5e32b&oe=5ECBD303" alt="Про улиткин домик 🐚">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
-">Расскажу о некоторых тонкостях</div>
+">Про улиткин домик 🐚</div>
 								</a>
 								<a href="./posts/./segodnya-post-bez-informatsii-i-poleznostey.html" class="article-more__item">
 									<div class="article-more__item-pic">
@@ -395,16 +395,16 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 		color: #FFFFFF;
 ">Сегодня пост без информации и полезностей.</div>
 								</a>
-								<a href="./posts/./dlya-tekh-kto-eshchyo-somnevaetsya-v-deystvii-mutsina.html" class="article-more__item">
+								<a href="./posts/./rasskazhu-o-nekotorykh-tonkostyakh.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>42</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/77117511_107756643947608_4047437575480573147_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=yjk-iKfBI9gAX9BwitU&oh=cf65a2675f3706a6f10bdd2f649b511e&oe=5F01D912" alt="Для тех кто ещё сомневается в действии муцина">
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82763511_580699352481005_1689644945899057538_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=IYAPJzfHwqkAX92dhIU&oh=a36945bdf1d63cfaf7686b06cab68e02&oe=5F00645F" alt="Расскажу о некоторых тонкостях">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
-">Для тех кто ещё сомневается в действии муцина</div>
+">Расскажу о некоторых тонкостях</div>
 								</a>
 							</div>
 						</div>
