--- a/error.html
+++ b/error.html
@@ -143,9 +143,18 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>55</span>
 								</div>
-								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80900696_114521346564401_8003277424207151392_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=VSax3TAKV2EAX_tKYhr&oh=5473a9e52796297c71783c3a0d9693db&oe=5E82CF36" alt="О том как мы строили шоурум, он же дегустационный">
+								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80900696_114521346564401_8003277424207151392_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=fPjxDeM01zUAX_zHMaq&oh=6650335c6d3a1b033b53ad2a10c18c8a&oe=5E82CF36" alt="О том как мы строили шоурум, он же дегустационный">
 							</div>
 							<div class="article-more__item-name">О том как мы строили шоурум, он же дегустационный</div>
+						</a>
+							<a href="./posts/./xxdlya-ulitki-eyo-mutsin.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>50</span>
+								</div>
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/87233672_2474857519430515_7406042281458362914_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=Smo5PaaHMoEAX9U_EHd&oh=d9937840a3dbc49a0b000212d60d7a24&oe=5E8AEBEC" alt="💧Для улитки её муцин">
+							</div>
+							<div class="article-more__item-name">💧Для улитки её муцин</div>
 						</a>
 							<a href="./posts/./kak-pravil-no-razvodit--mutsin.html" class="article-more__item">
 							<div class="article-more__item-pic">
@@ -161,7 +170,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>44</span>
 								</div>
-								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82965605_557510658179105_2292549139955388895_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=uGEsprhyFCYAX-UnFy4&oh=142dd090b462133f8efbcb76433ad5b3&oe=5E89E803" alt="Про улиткин домик 🐚">
+								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82965605_557510658179105_2292549139955388895_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=As-pRp9zop0AX-qr4_F&oh=d7dba6f0bf67ea303897db6926adcdc4&oe=5E89E803" alt="Про улиткин домик 🐚">
 							</div>
 							<div class="article-more__item-name">Про улиткин домик 🐚</div>
 						</a>
@@ -173,15 +182,6 @@
 								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82285187_1019123675128274_5927152375484103026_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=O3n3UR_qgTkAX8-6Aqx&oh=af7cd126c06080977ca91142d6217941&oe=5E804B4C" alt="Сегодня пост без информации и полезностей.">
 							</div>
 							<div class="article-more__item-name">Сегодня пост без информации и полезностей.</div>
-						</a>
-							<a href="./posts/./rasskazhu-o-nekotorykh-tonkostyakh.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>44</span>
-								</div>
-								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82763511_580699352481005_1689644945899057538_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=3Cccj5mvnkgAX863BMi&oh=04b424dec94dc649c25b21a08bfca498&oe=5E89BD5F" alt="Расскажу о некоторых тонкостях">
-							</div>
-							<div class="article-more__item-name">Расскажу о некоторых тонкостях</div>
 						</a>
 						</div>
 				</div>
