--- a/links.html
+++ b/links.html
@@ -387,7 +387,7 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>58</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80900696_114521346564401_8003277424207151392_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=3X7J3rOoGzUAX_BFctW&oh=9b7d27d97cdd6e24f00010e4461a3fa7&oe=5E9D2D36" alt="О том как мы строили шоурум, он же дегустационный">
+										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80900696_114521346564401_8003277424207151392_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=YPz7FtUSgkEAX80D5i4&oh=dc66c4b3620cd8a56844b815dc1e428f&oe=5E9D2D36" alt="О том как мы строили шоурум, он же дегустационный">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
@@ -404,16 +404,16 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 		color: #FFFFFF;
 ">Рекомендация по использованию для будущих</div>
 								</a>
-								<a href="./posts/./pro-ulitkin-domik-xx.html" class="article-more__item">
+								<a href="./posts/./segodnya-post-bez-informatsii-i-poleznostey.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>47</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82965605_557510658179105_2292549139955388895_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=9441hhsnAdMAX9NeWaX&oh=744400922112b9d422fe92ad4143dfb8&oe=5EA44603" alt="Про улиткин домик 🐚">
+										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82285187_1019123675128274_5927152375484103026_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=TGfoRjkdcdYAX9yyHwk&oh=67bd55ed57d76b7c0ab39404b5a758ba&oe=5E9AA94C" alt="Сегодня пост без информации и полезностей.">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
-">Про улиткин домик 🐚</div>
+">Сегодня пост без информации и полезностей.</div>
 								</a>
 							</div>
 						</div>
